# cosm_gov_watch

./: Dockerfile  LICENSE  README.md  chains.toml  pyproject.toml  requirements.txt
src/cli_app/: __main__.py  app.py
src/config_loader/: chains.toml  load_config.py
src/cosm_gov_watch/: __init__.py  __main__.py  api_requests.py  cli.py  load_config.py
